# rust-stuff

./: Cargo.toml
client/: Cargo.toml  index.html
client/client/: Cargo.toml
client/client/src/: main.rs
client/src/: lib.rs  main.rs
client/src/pages/: b_component.rs  lib.rs
client/src/router_lib/: router.rs  routing.rs
client/static/: index.html  style.css
rust-bst/: Cargo.toml
rust-bst/src/: main.rs
server/: Cargo.toml
server/client/: index.html
server/src/: main.rs  test.rs
src/: main.rs
src/exercieses/: array.rs  bst.rs  mod.rs
