[package]
name = "ss-sluzba"
version = "0.1.0"
authors = ["Dragan <d.novakovic1810@yahoo.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
